Container/Sign_in/style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: "Poppins", sans-serif;
}

body {
  background: #020410;
}

.header {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  padding: 25px 12.5%;
  display: flex;
  justify-content: space-between;
  align-items: center;
  z-index: 100;
}

.navbar a{
  position: relative;
  font-size: 16px;
  color: #e4e4e4;
  text-decoration: none;
  font-weight: 500;
  margin-right: 30px;
}

.navbar a::after {
  content: '';
  position: absolute;
  left: 0;
  bottom: -5px;
  width: 100%;
  height: 2px;
  background: #e4e4e4;
  border-radius: 5px;
  transform-origin: right;
  transform: scaleX(0);
  transition: transform 0.5s;
}

.navbar a:hover::after {
  transform-origin: left;
  transform: scaleX(1);
}

.search-bar {
  width: 250px;
  height: 45px;
  background: transparent;
  border: 2px solid #e4e4e4;
  border-radius: 6px;
  display: flex;
}

.search-bar input {
  width: 100%;
  background: transparent;
  border: none;
  outline: none;
  font-size: 16px;
  color: #e4e4e4;
  padding-left: 10px;
}

.search-bar button {
  width: 40px;
  height: 100%;
  background-color: transparent;
  border: none;
  outline: none;
  display: flex;
  justify-content: center;
  align-items: center;
  cursor: pointer;
}

.search-bar button i {
  font-size: 22px;
  color: #e4e4e4;
}

.background {
  width: 100%;
  height: 100vh;
  background: url(Images/pexels-semws-2670898.jpg);
  background-size: cover;
  background-position: center;
  filter: blur(10px);
}

.container {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: 75%;
  height: 550px;
  background: url(Images/pexels-semws-2670898.jpg) no-repeat;
  background-size: cover;
  background-position: center;
  margin-top: 20px;
  border-radius: 20px;
}

.container .content {
  position: absolute;
  top: 0;
  left: 0;
  width: 58%;
  height: 100%;
  background-color: transparent;
  padding: 80px;
  color: #e4e4e4;
  display: flex;
  justify-content: space-between;
  flex-direction: column;
}

.content .logo {
  font-size: 30px;
}

.content h2 {
  font-size: 40px;
}

.content h2 span{
  font-size: 25px;
}

.text-sci p{
  font-size: 16px;
  margin: 20px 0;
}

.social-icons a i{
  font-size: 22px;
  color: #e4e4e4;
  margin-right: 10px;
  transition: 0.5s ease;
}

.social-icons a:hover i {
  transform: scale(1.2);
}

.container .logreg-box {
  position: absolute;
  top: 0;
  right: 0;
  width: calc(100% - 58%);
  height: 100%;
  overflow: hidden;
}

.logreg-box .form-box {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
  height: 100%;
  background: transparent;
  backdrop-filter: blur(20px);
  border-top-right-radius: 10px;
  border-bottom-right-radius: 10px;
  color: #e4e4e4;
}

.logreg-box .form-box.login {
  transform: translateX(0);
  transition: 0.6s ease;
  transition-delay: 0.7s;
}

.logreg-box.active .form-box.login {
  transform: translateX(430px);
  transition-delay: 0s;
}

.logreg-box .form-box.register {
  transform: translate(430px,-550px);
  transition: transform 0.6s ease;
  transition-delay: 0s;
}

.logreg-box.active .form-box.register {
  transform: translate(0, -550px);
  transition-delay: 0.7s;
}

.form-box h2 {
  font-size: 32px;
  text-align: center;
}

.form-box .input-box {
  width: 300px;
  height: 50px;
  border-bottom: 2px solid #e4e4e4;
  margin: 30px 0;
  position: relative;
}

.input-box input {
  width: 100%;
  height: 100%;
  background: transparent;
  border: none;
  outline: none;
  font-size: 15px;
  color: #e4e4e4;
  font-weight: 500;
  padding-right: 28px;
}

.input-box label {
  position: absolute;
  top: 50;
  left: 0;
  transform: translateY(-50%);
  font-size: 16px;
  font-weight: 500;
  pointer-events: none;
  transition: top 0.3s ease, font-size 0.3s ease;
}

.input-box input:focus~label,
.input-box input:valid~label {
  top: 0;
  font-size: 12px;
}

.input-box .icon {
  position: absolute;
  top: 13px;
  right: 0;
  font-size: 19px;
}

.form-box .remeber-forgot {
  font-size: 14.5px;
  font-weight: 500;
  margin: -15px 0 15px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 100%;
}

.remember-forgot label input {
  accent-color: #e4e4e4;
  margin-right: 3px;
}

.remember-forgot a {
  color: #e4e4e4;
  text-decoration: none;
  margin-left: 40px;
}

.remember-forgot a:hover {
  text-decoration: underline;
}

.btn {
  width: 100%;
  height: 45px;
  background-color: #2e3340;
  border: none;
  outline: none;
  border-radius: 4px;
  cursor: pointer;
  font-size: 16px;
  color: #e4e4e4;
  font-weight: 500;
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
  margin-top: 8px;
}

.form-box .login-register {
  font-size: 14.5px;
  font-weight: 500;
  text-align: center;
  margin-top: 25px;
}

.login-register p a {
  color: #e4e4e4;
  font-weight: 600;
  text-decoration: none;
}

.login-register p a:hover {
  text-decoration: underline;
}

